# ideation-agent-customer-discovery

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: run.yml
src/ideation_agent_customer_discovery/: __init__.py  agent.py  main.py
src/ideation_agent_customer_discovery/prompts/: system.md
tests/: test_agent.py
