[project]
name = "ideation-agent-customer-discovery"
version = "0.1.0"
description = "Customer Segment Expert & Mom Test Interview Strategist for Ideation Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Othentic" }]
keywords = ["ideation", "claude", "agent"]
dependencies = ["click>=8.1.0", "mem0ai>=0.1.0", "rich>=13.0.0", "pydantic>=2.0.0"]

[project.scripts]
ideation-agent-customer-discovery = "ideation_agent_customer_discovery.main:cli"

[project.urls]
Homepage = "https://github.com/Othentic-Ai/ideation-agent-customer-discovery"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
